# magia

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-build.yml  ci-general.yml  pytest.yml  python-publish.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  bundle.md  elaborate.md  external_module.md  memory.md  roadmap.md  syntax.md
magia/: __init__.py  assertions.py  bundle.py  clock.py  comb_ops.py  comb_select.py  constant.py  constants.py  core.py  data_struct.py  elaborator.py  external.py  factory.py  io_ports.py  io_signal.py  memory.py  module.py  module_context.py  register.py  signals.py  sva.py  sva_manual.py  util.py
magia/bus/: __init__.py  axilite.py  axistream.py
magia/format/: __init__.py  fixed_point.py
magia/generator/: __init__.py
magia/std/: __init__.py  bundles.py  edges.py  encoding.py  fixed_point.py  storage.py
magia/stl/: bundles.py
magia/utils/: __init__.py  module_context.py
magia/utils/parser/: .gitignore  Makefile  SystemVerilogLexer.g4  SystemVerilogLexer.py  SystemVerilogParser.g4  SystemVerilogParser.py  SystemVerilogParserListener.py  SystemVerilogParserVisitor.py  __init__.py  parse.py
std_wip/: storage.py
syn_magia/: core.py  module.py
tests/: __init__.py  conftest.py  test_assertions.py  test_external_mod.py  test_memory.py  test_module_instance.py  test_smoke.py  test_sva_manual.py  test_util.py
tests/bundle/: test_bundle.py
tests/bus/: test_axilite.py
tests/core/: test_const.py  test_module_instance.py  test_op.py  test_reg.py  test_signal.py
tests/helper/: __init__.py
tests/std/: test_edges.py  test_fixed_point.py  test_stdio.py
tests/std/encoding/: test_onehot.py
tests/utils/: test_code.sv  test_parse_sv.py
