# pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "I001", "U", "N", "S", "B", "A", "C4", "T10", "ISC", "ICN", "T20", "Q", "RET", "SIM", "TID", "ERA"]
lint.ignore = ["F821", "A003"]

[tool.ruff.lint.per-file-ignores]

"tests/**" = ["S101", "S311"]

[tool.coverage.run]
omit = [
    "tests/*",
    "magia/utils/parsers/SystemVerilog*",
    "magia/**/__init__.py",
]

[tool.poetry]
name = "magia-hdl"
version = "0.5.0"
description = "Magia generates Synthesizable SystemVerilog in pythonic syntax"
readme = "README.md"
authors = ["khwong-c64 <kin.hin.wong.c@gmail.com>"]
license = "LICENSE"

packages = [
    { include = "magia" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = [
    "Verilog HDL", "SystemVerilog",
    "Synthesizable", "RTL", "HDL", "Hardware Description Language",
    "Code Generation", "FPGA", "ASIC", "EDA", "RTL Design"
]

[tool.poetry.extras]
full = ["hdlConvertor-binary"]

[tool.poetry.dependencies]
python = "^3.9"
hdlConvertor-binary = { version = "~2.3", optional = true }

[tool.poetry.group.dev.dependencies]
cocotb = "*"
cocotb-test = "*"
pytest = "*"
pytest-xdist = "*"
pytest-github-report = "*"
ruff = "~0.3.3"
hdlConvertor-binary = "~2.3"
magia-flow = "^0.1"
coverage = { extras = ["toml"], version = "^7.4.4" }
pytest-cov = "^4.1.0"

[tool.poetry.urls]
Repository = "https://github.com/magia-hdl/magia"

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
log_cli = true  # turn to true to enable debug logging
